--- a/MAGIC-notebooks/Titanic.ipynb
+++ b/MAGIC-notebooks/Titanic.ipynb
@@ -12,7 +12,7 @@
     "1. **Standard Classification Pipeline** - includes data cleaning, feature scaling and hyper-parameters tuning for best performance.\n",
     "2. **Misclassification Analysis** - Using Jitter plots and the MAGIC tool. \n",
     "\n",
-    "Link to dataset: [here](https://www.kaggle.com/datasets/prkukunoor/TitanicDataset)"
+    "Link to dataset: [here](https://www.kaggle.com/datasets/prkukunoor/TitanicDataset)."
    ]
   },
   {
